# xixspoof2

./: LICENSE  README.md  pyproject.toml
xixspoof2/: cli.py  cookies.py  eyeball.py  loader.py  logutil.py  progress.py  rbxlmini.py  replacer.py  roblox.py  scanner.py  uploader.py
