[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xixspoof2"
version = "1.0.1"
description = "Python remake of animation-replacer-roblox (RBXLX native, RBXL best-effort). Improved deep scanning."
authors = [{ name = "xixfaces", email = "you@example.com" }]
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["requests>=2.31.0"]

[project.scripts]
xixspoof2 = "xixspoof2.cli:main"
